# rust-sql-typescript-svelte-monorepo

./: .gitignore  Cargo.toml  Makefile.toml  package.json
client/: .eslintrc  .gitignore  .prettierrc  package-lock.json  package.json  tsconfig.json
client/src/: App.svelte  Counter.svelte  Mailbox.ts  add_person.svelte  core.ts  get_people.svelte  index.ts
client/src/constants/: index.ts
client/src/people/: add_person.svelte  delete_person.svelte  get_people.svelte  update_person.svelte
client/src/utils/: app_utils.ts
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/handlers/: mod.rs
server/src/models/: mod.rs
server/src/queries/: mod.rs
server/src/responders/: mod.rs
server/src/ws_server/: mod.rs
src/: App.svelte  index.html  index.test.ts  main.rs  stores.ts  ws_client.ts
src/handlers/: mod.rs
src/models/: mod.rs
src/queries/: mod.rs
src/responders/: mod.rs
src/ws_client/: index.ts
src/ws_server/: mod.rs
ws_client/: index.ts
