[package]
name = "server"
version = "0.1.0"
authors = ["Frank Meza <frankmezapdx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.15"
actix-web  = "1.0.8"
actix-cors = "*"
json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "1.0"
ws = "*"

actix = "0.8.3"
actix-codec = "0.1.2"
actix-web-actors = "1.0.2"
actix-files = "0.1.6"
awc = "0.2.7"
bytes = "0.4"
env_logger = "0.7.1"
futures = "0.1"